Blender 2.8 | Bone layer moving in pose mode causes crash #58068

Closed
opened 2018-11-26 22:25:04 +01:00 by Karlo · 5 comments

System Information
Win7, Nvidia GTX 1080ti

Blender Version
Broken: blender-2.80.0-git.9abcf56fa88-windows64
Worked: 2.79

Short description of error
When moving bones to another layer while in pose mode blender crashes

Exact steps for others to reproduce the error
Use my blend file. I tried reproducing the error with a simpler scene but it didn't cause a crash.

  • Open scene
  • Switch to pose mode
  • Select one of the longer tail bones and move it to the second layer
  • Go to the Layers in the Skeleton menu of the Armature and click the first one

At this point Blender should crash.

https:drive.google.com/file/d/1ZLpKpUv1miQCaHCzsXgD49q1y0Dz9cQs/view?usp=sharingAs this rig is part of a production and provided only for debugging it would be nice if someone could remove the link after the issue has been resolved.//

**System Information** Win7, Nvidia GTX 1080ti **Blender Version** Broken: blender-2.80.0-git.9abcf56fa88-windows64 Worked: 2.79 **Short description of error** When moving bones to another layer while in pose mode blender crashes **Exact steps for others to reproduce the error** Use my blend file. I tried reproducing the error with a simpler scene but it didn't cause a crash. - Open scene - Switch to pose mode - Select one of the longer tail bones and move it to the second layer - Go to the Layers in the Skeleton menu of the Armature and click the first one At this point Blender should crash. https:*drive.google.com/file/d/1ZLpKpUv1miQCaHCzsXgD49q1y0Dz9cQs/view?usp=sharing*As this rig is part of a production and provided only for debugging it would be nice if someone could remove the link after the issue has been resolved.//
Author

Added subscriber: @kpavicic

Added subscriber: @kpavicic
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-11-28 14:35:24 +01:00
Member

Confirmed, bPoseChannel is NULL (cannot be found in BKE_pose_channel_active() when its on a disabled layer)

1  mul_m4_m4m4_uniq                    math_matrix.c           204  0x2eb283f 
2  mul_m4_m4m4                         math_matrix.c           189  0x2eb270f 
3  WIDGETGROUP_armature_spline_refresh view3d_gizmo_armature.c 200  0x1d97393 
4  wm_gizmogroup_ensure_initialized    wm_gizmo_group.c        219  0x1c847aa 
5  gizmomap_prepare_drawing            wm_gizmo_map.c          366  0x1c87452 
6  WM_gizmomap_draw                    wm_gizmo_map.c          452  0x1c87743 
7  DRW_draw_gizmo_3d                   draw_view.c             256  0x27f5143 
8  DRW_draw_render_loop_ex             draw_manager.c          1547 0x27e69bc 
9  DRW_draw_view                       draw_manager.c          1395 0x27e6347 
10 view3d_draw_view                    view3d_draw.c           1319 0x1d88067 
11 view3d_main_region_draw             view3d_draw.c           1340 0x1d88117 
12 ED_region_do_draw                   area.c                  529  0x22081ba 
13 wm_draw_window_offscreen            wm_draw.c               580  0x1c50de3 

I guess for widget drawing it should be OK to just do nothing if we're not getting active pose channel back, fix incoming...

Confirmed, bPoseChannel is NULL (cannot be found in `BKE_pose_channel_active()` when its on a disabled layer) ``` 1 mul_m4_m4m4_uniq math_matrix.c 204 0x2eb283f 2 mul_m4_m4m4 math_matrix.c 189 0x2eb270f 3 WIDGETGROUP_armature_spline_refresh view3d_gizmo_armature.c 200 0x1d97393 4 wm_gizmogroup_ensure_initialized wm_gizmo_group.c 219 0x1c847aa 5 gizmomap_prepare_drawing wm_gizmo_map.c 366 0x1c87452 6 WM_gizmomap_draw wm_gizmo_map.c 452 0x1c87743 7 DRW_draw_gizmo_3d draw_view.c 256 0x27f5143 8 DRW_draw_render_loop_ex draw_manager.c 1547 0x27e69bc 9 DRW_draw_view draw_manager.c 1395 0x27e6347 10 view3d_draw_view view3d_draw.c 1319 0x1d88067 11 view3d_main_region_draw view3d_draw.c 1340 0x1d88117 12 ED_region_do_draw area.c 529 0x22081ba 13 wm_draw_window_offscreen wm_draw.c 580 0x1c50de3 ``` I guess for widget drawing it should be OK to just do nothing if we're not getting active pose channel back, fix incoming...

This issue was referenced by 3cc0eb36c3

This issue was referenced by 3cc0eb36c3c05ac2661e2fac04c51db1bf0082b9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58068
No description provided.