Fix T58068: gizmo crash for bone on a disabled armature layer

Maniphest Tasks: T58068

Differential Revision: https://developer.blender.org/D4004